# Portfolio-v1

./: .gitignore  HISTORY.md  Pipfile  README.md  docker-compose.yml  package-lock.json  requirements.txt  ruff.toml  vercel.json
.github/workflows/: ci.yml
docs/: adr_acid_transactions.md  adr_architecture_xray.md  adr_background_jobs_beat.md  adr_celery_redis.md  adr_cicd.md  adr_design_system.md  adr_django_migrations.md  adr_django_ninja_postgres.md  adr_docker_optimization.md  adr_e2e_testing.md  adr_fastapi_redis.md  adr_fintech_schema.md  adr_fintech_security.md  adr_frontend_routing_api.md  adr_frontend_setup.md  adr_frontend_state_management.md  adr_git_sensei.md  adr_guest_auth.md  adr_hybrid_architecture.md  adr_infrastructure.md  adr_infrastructure_gateway.md  adr_pdf_generation.md  adr_rag_ai.md  adr_redis_advanced.md  adr_responsive_ui_ux.md  adr_stripe.md  adr_validation_error_handling.md  adr_websockets.md  brief.md  deployment_guide.md  design_system_concept.md  frontend_design.md  implementation_plan.md  learning_acid_transactions.md  learning_architecture_xray.md  learning_background_jobs_beat.md  learning_celery_redis.md  learning_cicd.md  learning_content_strategy.md  learning_dashboard_architecture.md  (+24 more)
frontend-landing/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend-landing/e2e/: core-flow.spec.ts
frontend-landing/playwright-report/: index.html
frontend-landing/src/: App.css  App.tsx  index.css
frontend-landing/src/api/: b2b.ts  client.ts  fintech.ts  monitor.ts
frontend-landing/src/components/: About.tsx  AiChat.tsx  AiMentoring.tsx  B2BService.tsx  Contact.tsx  ErrorBoundary.tsx  Footer.tsx  Hero.tsx  Hobby.tsx  Navbar.tsx  Projects.tsx  TechStack.tsx
frontend-landing/src/context/: DevModeContext.ts  DevModeContext.tsx  DevModeProvider.tsx  useDevMode.ts
nginx/: nginx.conf  nginx_safe.conf
service-b2b-data/: Dockerfile  Pipfile  README.md  ai_engine.py  main.py  pyproject.toml  requirements.txt  requirements.txt.bak
service-fintech/: Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
service-fintech/accounts/: admin.py  api.py  models.py  pdf_generator.py  schemas.py
service-fintech/accounts/migrations/: 0001_initial.py  0002_alter_transaction_transaction_type.py
service-fintech/core/: settings.py  urls.py
service-price-monitor/: Dockerfile  README.md  celerybeat-schedule  main.py  pyproject.toml
(+19 files in other folders)
