[tool.poetry]
name = "service-b2b-data"
version = "0.1.0"
description = "Microservice for company data verification with Redis cache"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
redis = "^5.0.1"
httpx = "^0.26.0"
fastapi-mail = "^1.4.1"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B"] # Podstawowe zasady: błędy, formatowanie, importy

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
