[tool.poetry]
name = "service-fintech"
version = "0.1.0"
description = "Fintech simulator using Django Ninja and PostgreSQL"
authors = ["Dyzio <dyzio@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
django-ninja = "^1.1.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
django-cors-headers = "^4.3.1"
uvicorn = "^0.27.0"
httpx = "^0.26.0"
celery = "^5.3.6"
redis = "^5.0.1"
reportlab = "^4.0.9"
stripe = "^11.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"